A tabbed layout to start from. The tabs aren't filled with anything yet. References #1

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, BlekingskaSangbokActivity!</string>
     <string name="app_name">BlekingskaSangbok</string>
+    <string name="start">Hello World, Start!</string>
+    <string name="search">Hello World, Sök!</string>
+    <string name="list">Hello World, List!</string>
+    <string name="about">Hello World, Om!</string>
 </resources>
