--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">BlekingskaSangbok</string>
-    <string name="start">Hello World, Start!</string>
-    <string name="search">Hello World, Sök!</string>
-    <string name="list">Hello World, List!</string>
-    <string name="about">Hello World, Om!</string>
+	<string name="app_name">BlekingskaSangbok</string>
+	<string name="start">Hello World, Start!</string>
+	<string name="search">Hello World, Sök!</string>
+	<string name="list">Hello World, List!</string>
+	<string name="about">Blekingska Nationens Sångbok - v. 0.0\n\n
+		Copyright 2011 Fredrik Strandin. All rights reserved.\n</string>
+	<string name="license1">Redistribution and use in source and binary forms, with or without modification, are
+	permitted provided that the following conditions are met:</string>
+	<string name="license2">Redistributions of source code must retain the above copyright notice, this list of
+	conditions and the following disclaimer.</string>
+	<string name="license3">Redistributions in binary form must reproduce the above copyright notice, this list
+	of conditions and the following disclaimer in the documentation and/or other materials
+	provided with the distribution.\n</string>
+	<string name="license4">THIS SOFTWARE IS PROVIDED BY Fredrik Strandin ``AS IS\'\' AND ANY EXPRESS OR IMPLIED
+				WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
+				FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL Fredrik Strandin OR
+				CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+				CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+				SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+				ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+				NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+				ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n</string>
+	<string name="license5">The views and conclusions contained in the software and documentation are those of the
+				authors and should not be interpreted as representing official policies, either expressed
+				or implied, of Fredrik Strandin.</string>
 </resources>
