It is now possible to add new songs via a JSON-file hosted on an http-server accessible from the phones network-connection.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,4 +22,9 @@
 	<string name="license5">The views and conclusions contained in the software and documentation are those of the
 				authors and should not be interpreted as representing official policies, either expressed
 				or implied, of Fredrik Strandin.</string>
+	<string name="add_url">Lägg till låtar</string>
+	<string name="add_url_title">Lägg till låtar</string>
+	<string name="add_url_message">Ange URLen till låtarna du vill lägga till.</string>
+	<string name="ok">OK</string>
+	<string name="cancel">Avbryt</string>
 </resources>
